--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-    </style>
 
+        </style>
+     <style name="button">
+        <item name="android:layout_marginLeft">50dip</item>
+         <item name="android:layout_marginRight">50dip</item>
+         <item name="android:textSize">20sp</item>
+         <item name="android:layout_gravity">center</item>
+         <item name="android:layout_marginBottom">10dp</item>
+         <item name="android:padding">20dp</item>
+    </style>
 </resources>
